<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvGreetingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/welcome"
            android:textColor="@color/purple_200"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/ivSearch"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@+id/tvGreetingMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvGreetingMessage" />

        <TextView
            android:id="@+id/tvHeadLines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/headlines"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGreetingMessage" />

        <TextView
            android:id="@+id/tvSeeMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/see_more"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvHeadLines"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvHeadLines" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBreakingNews"
            android:layout_width="0dp"
            android:layout_height="270dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeadLines" />

        <TextView
            android:id="@+id/tvCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/what_s_happening_in"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvBreakingNews" />

        <TextView
            android:id="@+id/tvSeeMoreCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/see_more"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvCategories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvCategories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCategories" />



        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="@+id/rvBreakingNews"
            app:layout_constraintEnd_toEndOf="@+id/rvBreakingNews"
            app:layout_constraintStart_toStartOf="@id/rvBreakingNews"
            app:layout_constraintTop_toTopOf="@+id/rvBreakingNews"
            app:trackColor="@color/purple_500" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>